2002-08-25  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in (RUNTEST): Use Makefile's srcdir and bupdir* macros,
	where appropriate.
	* winsup.api/winsup.exp: Use -nodefaultlibs when linking executable to
	avoid potentially linking installed dll.

2002-07-06  Christopher Faylor  <cgf@redhat.com>

	* testsuite/winsup.api/winsup.exp: Add -mwin32 to gcc flags so
	windows.h will be found.

2002-07-04  Egor Duda  <deo@logos-m.ru>

	* winsup.api/pthread/cancel1.c: New test. Port from pthreads-win32 
	project.
	* winsup.api/pthread/cancel2.c: Ditto.
	* winsup.api/pthread/cancel3.c: Ditto.
	* winsup.api/pthread/cancel4.c: Ditto.
	* winsup.api/pthread/cancel5.c: Ditto.

2002-07-03  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Eliminate unneeded Makefile recreation rule.

2002-02-27  Christopher Faylor  <cgf@redhat.com>

	* winsup.api/systemcall.c (main): Ensure that stdin is redirected.

2001-11-18  Egor Duda  <deo@logos-m.ru>

	* winsup.api/pthread/condvar3_1.c: Fix debugging output.

2001-11-15  Egor Duda  <deo@logos-m.ru>

	* winsup.api/pthread/: New directory. Ports of pthread functionality
	tests from pthreads-win32 project.
	* winsup.api/pthread/test.h: Commmon declaraions for pthread tests.
	* winsup.api/pthread/cleanup2.c: New test.
	* winsup.api/pthread/cleanup3.c: Ditto.
	* winsup.api/pthread/condvar1.c: Ditto.
	* winsup.api/pthread/condvar2.c: Ditto.
	* winsup.api/pthread/condvar2_1.c: Ditto.
	* winsup.api/pthread/condvar3.c: Ditto.
	* winsup.api/pthread/condvar3_1.c: Ditto.
	* winsup.api/pthread/condvar3_2.c: Ditto.
	* winsup.api/pthread/condvar3_3.c: Ditto.
	* winsup.api/pthread/condvar4.c: Ditto.
	* winsup.api/pthread/condvar5.c: Ditto.
	* winsup.api/pthread/condvar6.c: Ditto.
	* winsup.api/pthread/condvar8.c: Ditto.
	* winsup.api/pthread/count1.c: Ditto.
	* winsup.api/pthread/create1.c: Ditto.
	* winsup.api/pthread/create2.c: Ditto.
	* winsup.api/pthread/equal1.c: Ditto.
	* winsup.api/pthread/exit1.c: Ditto.
	* winsup.api/pthread/exit2.c: Ditto.