@@ -1,3 +1,10 @@
+2002-11-25  Robert Collins  <rbtcollins@hotmail.com>
+
+	* readme: Document running portions of the test suite (Thanks Egor!).
+	* winsup.api/pthread/mainthreadexits.c: New file, derived from 
+	Thomas Pfaff's test cases.
+	* winsup.api/pthread/threadidafterfork.c: Ditto.
+
 2002-08-25  Christopher Faylor  <cgf@redhat.com>
 
 	* Makefile.in (RUNTEST): Use Makefile's srcdir and bupdir* macros,
